<resources>
    <string name="app_name">Music Hub</string>

    <string name="title_login">Iniciar Sesión</string>
    <string name="et_hint_email_id">Correo electrónico</string>
    <string name="et_hint_password_id">Contraseña</string>
    <string name="lbl_forgot_password">¿Olvidaste tu Contraseña?</string>
    <string name="btn_lbl_login">Iniciar Sesión</string>
    <string name="dont_have_an_account">¿No tienes una cuenta?</string>
    <string name="register"><u>Regístrate</u></string>

    <string name="create_an_account">Crear Cuenta</string>
    <string name="hint_last_name">Apellidos</string>
    <string name="hint_first_name">Nombre</string>
    <string name="et_hint_confirm_password">Confirmar Contraseña</string>
    <string name="i_agree_to_the_terms_and_condition">Acepto Los <u>Términos y Condiciones</u></string>
    <string name="btn_lbl_register">Registrarse</string>
    <string name="already_have_an_account">¿Ya tienes una cuenta?</string>
    <string name="login"><u>Iniciar Sesión</u></string>

    <string name="err_msg_enter_first_name">Porfavor ingrese su nombre.</string>
    <string name="err_msg_enter_last_name">Porfavor ingrese sus apellidos.</string>
    <string name="err_msg_enter_email">Porfavor ingrese su email.</string>
    <string name="err_msg_enter_password">Porfavor ingrese su contraseña.</string>
    <string name="err_msg_enter_confirm_password">Porfavor confirme su contraseña.</string>
    <string name="err_msg_password_and_confirm_password_mismatch">Su contraseña no coincide.</string>
    <string name="err_msg_agree_terms_and_condition">Porfavor acepte los términos y condiciones.</string>
    <string name="registery_successful">Gracias por registrarse.</string>

    <string name="please_wait">Por favor, Espere&#8230;</string>

    <string name="title_forgot_password">¿Has olvidado tu contraseña?</string>
    <string name="forgot_password_title_description">Ingresa tu email, enviaremos un email para restablecer tu contraseña</string>
    <string name="btn_lbl_submit">Enviar</string>

    <string name="email_sent_success">¡Email enviado con éxito para restablecer su contraseña!</string>

</resources>